# Gamelib

./: .gitignore  LICENSE  README.md  game_library_spec.md  hydra-api-source-spec.md  index.html  knowledge.md  package-lock.json  package.json  splashscreen-spec.md  todo.md  vite.config.ts
.agents/skills/fable5/: SKILL.md
plans/: design-direction.md  hero-redesign.md  store-improvement-spec.md  store-page-spec.md
src/: App.css  App.tsx  index.css  library.css  main.tsx  store.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: achievement_watcher.rs  achievements.rs  config.rs  crackwatch.rs  deals.rs  game_scraper.rs  game_watcher.rs  gpu_detector.rs  lib.rs  local_achievements.rs  mahm_reader.rs  main.rs  metrics_collector.rs  price.rs  protondb.rs  rtss_reader.rs  size.rs  source_manager.rs  steam_game_watcher.rs  store_checker.rs  system_screenshots.rs  torrent_engine.rs  tray.rs
src-tauri/src/db/: achievements.rs  atomic.rs  games.rs  kv.rs  legacy.rs  migrate.rs  mod.rs  news.rs  pool.rs  schema.rs  schema_v1.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql  secrets.rs  sessions.rs  sources.rs  store_cache.rs  wishlist.rs
src-tauri/src/downloader/: debrid.rs  direct.rs  mod.rs
src-tauri/src/epic/: auth.rs  sync.rs  types.rs
src-tauri/src/gog/: auth.rs  client.rs  cookies.rs  installed.rs  mod.rs  sync.rs  types.rs  webview_capture.rs
src-tauri/src/humble/: auth.rs  client.rs  installed.rs  mod.rs  settings.rs  sync.rs  types.rs
src-tauri/src/rockstar/: mod.rs  sync.rs
src-tauri/src/steam/: auth.rs  mod.rs  sync.rs  types.rs
src-tauri/src/uplay/: cache.rs  mod.rs  settings.rs  sync.rs  types.rs
src/components/: AchievementsTab.tsx  BigScreenHeader.tsx  BigScreenLayout.tsx  BigScreenNav.tsx  CrackWatchCard.tsx  DensityToggle.tsx  DownloadButton.tsx  DownloadModal.tsx  DownloadPopover.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  GameRelationsCard.tsx  HydraPlayerCount.tsx  HydraReviewsPanel.tsx  HydraStatsPopover.tsx  ImportModal.tsx  LandingRedirect.tsx  MainContent.tsx  PlayerCountBadge.tsx  PlayerCountPopover.tsx  PlayerCountSparklineCard.tsx  ProtonDBCard.tsx  ReviewsTab.tsx  Sidebar.tsx  SidebarFilterPopover.tsx  SidebarHoverPreview.tsx  SourceManager.tsx  Splashscreen.tsx  SteamPlayerActivityCompact.tsx  SteamPlayerCount.tsx  SteamPlayerCountPopover.tsx  SteamPlayerHistoryChart.tsx  TopNav.tsx  WebLinksTab.tsx  WindowControls.tsx
src/components/activity/: ActivityDashboard.tsx  ActivityGantt.tsx  ActivityPerformance.tsx  ActivitySessions.tsx  Icons.tsx
src/components/bigscreen/: BigScreenCommunity.tsx  BigScreenCover.tsx  BigScreenFriends.tsx  BigScreenGameHub.tsx  BigScreenHome.tsx  BigScreenLightbox.tsx  BigScreenMetaStrip.tsx  BigScreenNews.tsx  BigScreenPill.tsx  BigScreenSearchOverlay.tsx  BigScreenSystem.tsx  BigScreenTabBar.tsx  BigScreenTabPanel.tsx  bigscreenFormat.ts
src/components/charts/: BarChart.tsx  DonutChart.tsx  LineChart.tsx
src/components/download-modal/: ConfidenceWarning.tsx  DownloadModal.tsx  FileSelection.tsx  MirrorPicker.tsx  OptionsSection.tsx  OwnershipBanner.tsx  ResultRow.tsx  ResultsList.tsx  SavePathPicker.tsx  StepStates.tsx  helpers.ts  types.ts
src/components/downloads/: BandwidthHero.tsx  BandwidthSparkline.tsx  DownloadIcons.tsx  DownloadRow.tsx  DownloadsFilterBar.tsx  DownloadsToolbar.tsx  MagnetInputBar.tsx
src/components/game/: AboutSection.tsx  BigScreenGamePage.tsx  BigScreenHeroBackground.tsx  EditGameModal.css  EditGameModal.tsx  EditImageSlot.tsx  GameActivityTab.tsx  GameDetailsCard.tsx  GameHero.tsx  GameLaunchActions.tsx  GameStatusDropdown.tsx  InfoKpiCard.tsx  LanguagesSection.tsx  RatingsKpiCard.tsx  RelatedContentCard.tsx  ReleasesCard.tsx  ScreenshotsSection.tsx  SpecsCard.tsx  StorylineSection.tsx  SystemRequirementsCard.tsx  TimeToBeatCard.tsx  VideosSection.tsx  icons.tsx  index.ts  shared.tsx  video.ts
src/components/hero/: FriendsPlayingStrip.tsx  HeroTrailer.tsx
src/context/: AchievementContext.tsx  ActivityContext.tsx  BigScreenContext.tsx  CrackWatchContext.tsx  DensityContext.tsx  DownloadContext.tsx  GameContext.tsx  PriceContext.tsx  SessionNotesContext.tsx  SettingsContext.tsx  SidebarCollapseContext.tsx  SourceContext.tsx  SplashContext.tsx  ThemeContext.tsx  ToastContext.tsx  WishlistContext.tsx
src/hooks/: GamepadProvider.tsx  useBigScreen.ts  useCollapsedState.ts  useDiscoverRails.ts  useFocusable.ts  useForYou.ts  useFriendsPlaying.ts  useGameAccent.ts  useGamepad.ts  useHiddenGames.ts  useHydraGameStats.ts  useLibraryFilters.ts  useLibraryIndex.ts  useNewsFeeds.ts  usePlayerCountHistory.ts  usePrefersReducedMotion.ts  useProgressiveImages.tsx  useRecentSearches.ts  useRecentlyViewed.ts  useSearchSuggestions.ts  useSizeUnit.ts  useSourceAvailabilityCache.ts  useSteamAppId.ts  useSteamGameStats.ts  useSteamPlayerCount.ts  useSteamPlayerHistory.ts  useStoreCache.ts  useStoreCatalogue.ts  useStoreGames.ts  useStorePresets.ts  useStoreSourceAvailability.ts  useViewDensity.ts  useWishlist.ts
src/pages/: AchievementsPage.tsx  ActivityPage.tsx  CommunityPage.tsx  DownloadsPage.tsx  FriendsPage.tsx  GamePage.tsx  HomePage.tsx  LibraryPage.tsx  NewsPage.tsx  PluginsPage.tsx  SettingsPage.tsx  StoragePage.css  StoragePage.tsx  StoreGameDetail.tsx  StorePage.tsx  WishlistPage.tsx  community.css  communityProfileExtras.tsx  communityProfileStats.ts  communityScreenshotThumb.tsx  communityStorage.ts  friendSuggestionSignal.ts  friends.css  friendsStorage.ts
src/styles/: animations.css  bigscreen.css  download.css  game-cards.css  home.css  page-achievements.css  page-community.css  page-deals.css  page-downloads.css  page-friends.css  page-news.css  page-settings.css  page-storage.css  page-store.css  page-wishlist.css  page.css  settings.css  source-manager.css  store-discover.css  ui.css  wishlist.css
src/types/: deals.ts  download.ts  epic.ts  game.ts  gog.ts  humble.ts  rockstar.ts  source.ts  steam.ts  uplay.ts
src/utils/: color.ts  perfSamples.ts  temp.ts
(+65 files in other folders)
