[package]
name = "gamelib"
version = "0.1.0"
description = "A unified game library application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gamelib_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
# Auto-launch the app on system boot (Windows / macOS / Linux). The
# `MacosLauncher::LaunchAgent` arg makes the macOS build use a per-user
# LaunchAgent — the only launcher the modern macOS allows without
# helper entitlements. We pass an empty `args` here because the user
# can boot the app into a regular visible window (the `--minimized`
# boot-flag is intentionally not exposed; adding it would require a
# second settings tile and a second kv key, and only one user asked
# for it). `withGlobalTauri` is on so the frontend can subscribe to
# the backend's "discord-presence-update" event too.
tauri-plugin-autostart = "2"
base64 = "0.22"
mime_guess = "2.0.5"
spider = { version = "2", default-features = false, features = ["sync", "ua_generator"] }
scraper = "0.22"
reqwest = { version = "0.12", features = ["json", "cookies"] }
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["clock"] }
urlencoding = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
# === Phase 0–4 storage layer ===
# Atomic write helper: writes to a sibling .tmp file then fs::rename for
# crash-safe persistence. Used by every legacy JSON write until the
# corresponding DAO migration lands in Phase 1–3.
tempfile = "3"
# SQLite (bundled — no system library required on Win/Mac/Linux).
#
# Pinned to 0.31 because r2d2_sqlite 0.24 declares a transitive
# dependence on rusqlite ^0.31. Two different rusqlite majors can't
# coexist in Cargo's dep graph because both link `libsqlite3-sys`
# with `links = "sqlite3"`. Bumping r2d2_sqlite to 0.25 (which
# targets rusqlite 0.32) is also fine — pick one. We pin rusqlite to
# 0.31 + r2d2_sqlite 0.24 to keep the existing API surface stable.
rusqlite = { version = "0.31", features = ["bundled"] }
# Connection pool so concurrent Tauri commands don't fight for a single
# SQLite handle. SqliteConnectionManager is sync; we call DB methods
# directly inside async commands (the queries are sub-millisecond on
# WAL-mode local files).
r2d2 = "0.8"
r2d2_sqlite = "0.24"
# OS keychain for OAuth tokens / debrid API keys (Phase 4).
# Default features include apple-native (macOS Keychain),
# windows-native (Credential Manager), and crypto-rust. We
# additionally opt into sync-secret-service so Linux boxes with
# Gnome Keyring / KWallet work out of the box. `crypto-rust`
# (default) avoids the openssl-sys transitive dep — we deliberately
# do NOT use `vendored` (that's an openssl-sys feature, not
# keyring's).
keyring = { version = "3", features = ["sync-secret-service"] }
# Steam login helpers (encrypt_password + token extraction).
# Phase 4 keeps these crates here because the original Steam
# auth.rs already used them; the migration only changes WHERE we
# persist tokens (file -> OS keychain), not the encryption flow.
rand = "0.8"
sha2 = "0.10"
num-bigint = "0.4"
wmi = "0.14"
# Windows registry reader for GOG installed-game detection
# (HKLM+HKCU Uninstall entries). Linux/macOS builds pull this in
# but the cfg-gated code paths silently skip it — keeping the
# dependency tree uniform across platforms avoids a `#[cfg]` ladder
# in `gog::installed`.
winreg = "0.52"
# Rockstar uninstall-string parsing (mirrors Playnite's
# `Regex.Match(UninstallString, @"(?:Launcher|uninstall)\.exe.+uninstall=(.+)$")`).
regex = "1"
# YAML parsing for the Ubisoft Connect local product cache. Playnite's
# `Uplay.GetLocalProductCache` deserializes each cache entry's `GameInfo`
# as a YAML `ProductInformation` document; we mirror that with serde_yaml.
serde_yaml = "0.9"
# Win32_UI_Shell/WindowsAndMessaging are used for UAC elevation when a game
# executable requires administrator privileges. Win32_System_Registry is a
# transitive feature required by Win32_UI_Shell in windows crate 0.58.
windows = { version = "0.58", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus"] }
# Torrent engine. Pure-Rust, no C++/Boost/MSVC build step on Windows.
# Pinned to a major version (`8`) — librqbit's API moves fast and we
# want `cargo update` to refuse silent breaking changes.
#
# Bumped from 7.x to 8.x because 7.0.1 has a broken dep graph:
# `librqbit 7.0.1` → `librqbit-core 4.1.0`, but its sub-deps
# `librqbit-dht 5.3.1` and `librqbit-peer-protocol 4.3.0` →
# `librqbit-core 5.0.0`. Both versions land in the build and librqbit
# 7.0.1 fails to compile (every call to `iter_filenames_and_lengths`,
# `Magnet::from_id20`, etc. is mismatched). librqbit 8.x unified the
# dep graph on `librqbit-core 5.x` end-to-end.
#
# Feature notes:
# - `default-tls` enables rustls for HTTPS magnet/`.torrent` URL fetching.
# - `http-api` is left OFF — we only use the in-process async API, not
#   the embedded HTTP server. Saves the axum/serde_html_form dep tree.
# - Upload disablement is configured at runtime via `SessionOptions`.
#   The `disable_upload` field is a runtime toggle in 8.x.
librqbit = { version = "8", default-features = false, features = ["default-tls"] }
# Magnet URI parsing — extract the info-hash, trackers, and
# exact-topic fields without rolling our own URI parser.
url = "2"
percent-encoding = "2"

